complete export & import data to app.js, declared buttons & style

--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script defer src="./js/app.js"></script>
+  <script src="./js/app.js" type="module"></script>
+  <script src="./data /continents.js" type="module"></script>
   <title>Name the Country of the Flag</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <h1>Guess the Country of the Flag</h1>
-  <div class=""></div>
+  <div id="container">
+    <button id="americas-button">The Americas</button>
+    <button id="african-button">African Countries</button>
+    <button id="eurasian-button">Eurasian Countries</button>
+    <button id="globe-button"></button>
+    <button id="next-button">NEXT</button>
+</div>
+  <div id="flag-container"
+    <div class="flags">
+    </div>
+  </div>
+
 </body>
 </html>
