complete flag url & init function

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
   <h1>Guess the Country of the Flag</h1>
-  <div id="container">
+  <section class="continents">
     <button id="americas-button">The Americas</button>
     <button id="african-button">African Countries</button>
     <button id="eurasian-button">Eurasian Countries</button>
     <button id="globe-button"></button>
     <button id="next-button">NEXT</button>
-</div>
+  </section>
   <div id="flag-container"
     <div class="flags">
     </div>
