--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
   <script src="./data /continents.js" type="module"></script>
   <title>Name the Country of the Flag</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow&family=Rakkas&family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Guess the Country of the Flag</h1>
+  <nav>
+    <h1>Guess the Country of the Flag </h1>
+  </nav>
+  <p>Choose a Continent to Get Started</p>
   <section class="continents">
     <button id="americas-button">The Americas</button>
     <button id="african-button">African Countries</button>
     <button id="eurasian-button">Eurasian Countries</button>
-    <button id="globe-button"></button>
-    <button id="next-button">NEXT</button>
   </section>
-  <div id="flag-container"
+  <button id="globe-button"></button>
+ 
+  <!-- <div id="flag-container"
     <div class="flags">
-    </div>
+    </div> -->
+    <button class="back-button">Back</button>
   </div>
 
 </body>
