complete uplaod & toggle function of audio files and dark/light mode css in-progress

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <script src="./js/app.js" type="module"></script>
   <script defer src="./data /continents.js" type="module"></script>
   <title>Name the Country of the Flag</title>
+  <link 
+  id="favicon" 
+  rel="icon"
+  href="./assets/globe.jpg"
+  type="image/png" 
+  sizes="62x62"
+>
+
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +23,7 @@
   <nav>
     <h2>Guess the Country of the Flag </h2>
   </nav>
+  <button id="dark-mode-light">Shine Bright? Wave Your Flag</button>
   <h1>Choose a Continent to Get Started!</h1> 
   <div class="continents">
     <button id="americas-button">The Americas</button>
