--- a/index.html
+++ b/index.html
@@ -29,18 +29,15 @@
     <button id="americas-button">The Americas</button>
     <button id="african-button">African Countries</button>
     <button id="eurasian-button">Eurasian Countries</button>
-  </div>
+ 
   <img class="flag"> 
   <div class="answer-options">
     <button id="button1"></button>
     <button id="button2"></button>
     <button id="button3"></button>  
 </div>
-<!-- <button id="globe-button"></button>
-<button class="back-button">Back</button> -->
+<button id="back-button">Back</button> 
 
-
-
-
+</div>
 </body>
 </html>
