add checkCorrectAnswer function

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <nav>
     <h2>Guess the Country of the Flag </h2>
   </nav>
-  <button id="dark-mode-light">Shine Bright? Wave Your Flag</button>
+  <button id="dark-mode-light">Shine Bright? Wave Your Flag?</button>
   <h1>Choose a Continent to Get Started!</h1> 
   <div class="continents">
     <button id="americas-button">The Americas</button>
     <button id="african-button">African Countries</button>
     <button id="eurasian-button">Eurasian Countries</button>
- 
+
   <img class="flag"> 
   <div class="answer-options">
     <button id="button1"></button>
