complete implementation of revertButtonColors function by delaring a class of background colors in css.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </nav>
   <button id="dark-mode-light">Shine Bright? Wave Your Flag?</button>
   <h1>Choose a Continent to Get Started!</h1> 
+
   <div class="continents">
     <button id="americas-button">The Americas</button>
     <button id="african-button">African Countries</button>
@@ -32,12 +33,12 @@
 
   <img class="flag"> 
   <div class="answer-options">
-    <button id="button1"></button>
-    <button id="button2"></button>
-    <button id="button3"></button>  
+    <button class="button" id="button1"></button>
+    <button class="button" id="button2"></button>
+    <button class="button" id="button3"></button>  
 </div>
+<h3 id="track-score">Score: </h3>
 <button id="back-button">Back</button> 
-
 
 </body>
 </html>
