--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <button class="button" id="button2"></button>
     <button class="button" id="button3"></button>  
 </div>
-<h3 id="track-score">Score: </h3>
+  <div class="score" >
+    <h3 id="track-score">Score: </h3>
+  </div>
 <button id="back-button">Back</button> 
 
 </body>
