inprogress updating css for elements container

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   <button id="dark-mode-light">Shine Bright? Wave Your Flag?</button>
   <h1>Choose a Continent to Get Started!</h1> 
 
-  <div class="continents">
+<div class="board-container">
     <button id="americas-button">The Americas</button>
     <button id="african-button">African Countries</button>
     <button id="eurasian-button">Eurasian Countries</button>
-
+    
   <img class="flag"> 
   <div class="answer-options">
     <button class="button" id="button1"></button>
@@ -41,6 +41,6 @@
     <h3> Score: <span id="track-score"></span> /20</h3>
   </div>
 <button id="back-button">Back</button> 
-
+</div>
 </body>
 </html>
