complete implementation of background container to keep elements fromfloating when brower is adjusted

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
     <h2>Guess the Country of the Flag </h2>
   </nav>
   <button id="dark-mode-light">Shine Bright? Wave Your Flag?</button>
-  <h1>Choose a Continent to Get Started!</h1> 
+  <h1>Choose a continent to get started!</h1> 
 
 <div class="board-container">
-    <button id="americas-button">The Americas</button>
-    <button id="african-button">African Countries</button>
-    <button id="eurasian-button">Eurasian Countries</button>
+<div class="continents-container">
+    <button class="continent" id="americas-button">The Americas</button>
+    <button class="continent" id="african-button">African Countries</button>
+    <button class="continent" id="eurasian-button">Eurasian Countries</button>
+</div>
     
   <img class="flag"> 
   <div class="answer-options">
@@ -40,7 +42,7 @@
   <div class="score" >
     <h3> Score: <span id="track-score"></span> /20</h3>
   </div>
-<button id="back-button">Back</button> 
+<button id="back-button">Back</button>
 </div>
 </body>
 </html>
