reposition flag mood & modified audio file -html,css, & js

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <nav>
     <h2>Guess the Country of the Flag </h2>
   </nav>
-  <button id="dark-mode-light">Shine Bright? Wave Your Flag?</button>
-  <h1>Choose a continent to get started!</h1> 
+    <button id="flag-mode">Flag Mode?</button>
+    <h1>Choose a continent to get started!</h1> 
 
 <div class="board-container">
 <div class="continents-container">
