complete updating README.md file with images,desctiption,etc

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/app.js" type="module"></script>
@@ -9,7 +13,7 @@
   <link 
   id="favicon" 
   rel="icon"
-  href="./assets/globe.jpg"
+  href="./assets/images/favicon.ico"
   type="image/png" 
   sizes="62x62"
 >
@@ -25,7 +29,7 @@
   </nav>
     <button id="flag-mode">Flag Mode?</button>
     <h1>Choose a continent to get started!</h1> 
-
+<div id="message" >message</div>
 <div class="board-container">
 <div class="continents-container">
     <button class="continent" id="americas-button">The Americas</button>
