complete troublshooting error message on appendFlag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/app.js" type="module"></script>
@@ -15,9 +14,7 @@
   rel="icon"
   href="./assets/images/favicon.ico"
   type="image/png" 
-  sizes="62x62"
->
-
+  sizes="62x62">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,26 +24,25 @@
   <nav>
     <h2>Guess the Country of the Flag </h2>
   </nav>
-    <button id="flag-mode">Flag Mode?</button>
-    <h1>Choose a continent to get started!</h1> 
-<div id="message" >message</div>
+<button id="flag-mode">Flag Mode</button>
+<h1>Choose a continent to get started!</h1> 
+<div id="message"></div>
 <div class="board-container">
-<div class="continents-container">
+  <div class="continents-container">
     <button class="continent" id="americas-button">The Americas</button>
     <button class="continent" id="african-button">African Countries</button>
     <button class="continent" id="eurasian-button">Eurasian Countries</button>
-</div>
-    
+  </div>
   <img class="flag"> 
   <div class="answer-options">
     <button class="button" id="button1"></button>
     <button class="button" id="button2"></button>
     <button class="button" id="button3"></button>  
-</div>
+  </div>
   <div class="score" >
     <h3 id="score-display">Score:</h3>
   </div>
-<button id="back-button">Back</button>
+  <button id="reset-button">Reset</button>
 </div>
 </body>
 </html>
