code cleanup/typos in continents file & css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
   <meta charset="UTF-8">
@@ -19,7 +18,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
-
 </head>
 <body>
   <nav>
@@ -28,6 +26,7 @@
 <button id="flag-mode">Flag Mode</button>
 <h1>Choose a continent to get started!</h1> 
 <div id="message"></div>
+<div id="countdown"></div>
 <div class="board-container">
   <div class="continents-container">
     <button class="continent" id="americas-button">The Americas</button>
