fix feedbackmessage and edit to title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/app.js" type="module"></script>
   <script defer src="./data /continents.js" type="module"></script>
-  <title>Guess the Flag</title>
+  <title>Guess the Country</title>
   <link 
   id="favicon" 
   rel="icon"
